# atas_journal

./: .env.example  .gitignore  README.md  app.py  demo_lwc.py  pyproject.toml
.streamlit/: config.toml
api/: charts_data.py  deps.py  main.py  scope.py  serialize.py  summary.py
api/routers/: ai.py  calendar.py  charts.py  edges.py  filters.py  imports.py  meta.py  notes.py  overview.py  settings.py  statistics.py  trades.py
data/imports/: ATAS_statistics_04032026_05032026.xlsx  ATAS_statistics_05032026_06032026.xlsx  ATAS_statistics_06042026_07042026.xlsx  ATAS_statistics_06052026_06052026.xlsx  ATAS_statistics_07042026_08042026.xlsx  ATAS_statistics_08042026_09042026.xlsx  ATAS_statistics_14042026_15042026.xlsx  ATAS_statistics_16042026_17042026.xlsx  ATAS_statistics_20042026_21042026_100_wr.xlsx  ATAS_statistics_21042026_22042026.xlsx  ATAS_statistics_22042026_23042026.xlsx  ATAS_statistics_24042026_25042026.xlsx  ATAS_statistics_26052026_26052026_30k_break_3kprofit.xlsx  ATAS_statistics_27042026_28042026.xlsx  ATAS_statistics_27052026_28052026.xlsx
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.node.json
frontend/src/: index.css  main.tsx  router.tsx  theme.ts
frontend/src/components/: DataTable.tsx  DayExplorer.tsx  FilterBar.tsx  JournalForm.tsx  KpiCard.tsx  KpiGrid.tsx  Sidebar.tsx  TradeDetail.tsx
frontend/src/hooks/: useAi.ts  useCalendar.ts  useCharts.ts  useEdges.ts  useFilters.ts  (+6 more)
scripts/: patch_lwc.py
src/journal/: ai.py  charts.py  config.py  databento_client.py  db.py  edges.py  excursion.py  ingest.py  levels.py  metrics.py  trades.py  ui.py
(+30 files in other folders)
