[project]
name = "atas-journal"
version = "0.1.0"
description = "Personal trading journal for ATAS NQ futures exports with Databento chart reconstruction"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.40",
    "pandas>=2.2",
    "plotly>=5.24",
    "streamlit-lightweight-charts-pro>=0.3",
    "openpyxl>=3.1",
    "databento>=0.40",
    "python-dotenv>=1.0",
    "litellm>=1.50",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
